kubernetes/utility/apps/harbor-system/harbor/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: &namespace harbor-system
  annotations:
    external-dns/unifi: "true"
spec:
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  hostnames:
    - harbor.techtales.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /service/
        - path:
            type: PathPrefix
            value: /v2/
        - path:
            type: PathPrefix
            value: /c/
      backendRefs:
        - name: harbor-core
          namespace: *namespace
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor-portal
          namespace: *namespace
          port: 80
